unit_tests/regression.suite/global-syntax.err
float f = q.x;
           ^
(Line 2 char 12): ERROR: Syntax error
