unit_tests/regression.suite/global-syntax.lsl
rotation q;
float f = q.x;

default{timer(){}}
